erDiagram
    CARS {
        BIGINT id PK
        VARCHAR_17 vin UK
        VARCHAR_20 plate_number UK
        VARCHAR_80 make
        VARCHAR_80 model
        INT year_of_manufacture
        VARCHAR_20 car_class
        VARCHAR_20 status
        INT seats_count
        VARCHAR_20 transmission
        VARCHAR_20 fuel_type
        VARCHAR_150 location_name
        INT odometer_km
        TEXT image_urls
        VARCHAR_2000 notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    TARIFFS {
        BIGINT id PK
        VARCHAR_80 name UK
        NUMERIC_12_2 base_price
        NUMERIC_12_2 daily_price
        VARCHAR_20 car_class
        INT minimum_days
        INT mileage_limit_km
        NUMERIC_12_2 deposit_amount
        BOOLEAN insurance_included
        VARCHAR_500 restrictions
        VARCHAR_2000 description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    CLIENT_PROFILES {
        BIGINT id PK
        VARCHAR_120 full_name
        VARCHAR_120 email UK
        VARCHAR_30 phone
        VARCHAR_40 driver_license_number
        VARCHAR_20 driver_license_expiry
        VARCHAR_20 member_since
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    MAINTENANCE_WINDOWS {
        BIGINT id PK
        BIGINT car_id FK
        DATE start_date
        DATE end_date
        VARCHAR_300 description
        VARCHAR_120 service_type
        VARCHAR_2000 comment_text
        VARCHAR_20 status
        NUMERIC_12_2 estimated_cost
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    RENTAL_ORDERS {
        BIGINT id PK
        BIGINT car_id FK
        BIGINT client_id FK
        BIGINT tariff_id FK
        DATE start_date
        DATE end_date
        VARCHAR_150 pickup_location
        VARCHAR_150 return_location
        BIGINT total_days
        NUMERIC_12_2 base_price
        NUMERIC_12_2 daily_price
        NUMERIC_12_2 total_price
        VARCHAR_20 status
        TIMESTAMPTZ issued_at
        TIMESTAMPTZ actual_return_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    RENTAL_STATUS_HISTORY {
        BIGINT id PK
        BIGINT rental_id FK
        VARCHAR_20 status
        TIMESTAMPTZ changed_at
        VARCHAR_20 actor_role
        VARCHAR_300 note
    }

    CARS ||--o{ MAINTENANCE_WINDOWS : "has"
    CARS ||--o{ RENTAL_ORDERS : "used in"
    CLIENT_PROFILES ||--o{ RENTAL_ORDERS : "creates"
    TARIFFS ||--o{ RENTAL_ORDERS : "applied to"
    RENTAL_ORDERS ||--o{ RENTAL_STATUS_HISTORY : "status changes"
